--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -11,6 +11,7 @@
   -webkit-mask-border: 1px solid black;
   mask-border: 1px solid black;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   width: 100%;
   position: relative;
   pointer-events: none;
@@ -134,13 +135,6 @@
       font-size: calc(112.5% + 0.8vw);
   }
 }
-@media screen and (max-width: 850px) {
-  .top-half {
-    padding-top: 40px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-}
 @media screen and (max-width: 720px) {
   .link-container {
       display: none !important;
@@ -158,14 +152,7 @@
   .cursor-small {
       display: none;
   }
-  .text-container {
-      transform: translateY(-40px);
-  }
-  .bottom-half {
-      transform: translateY(-40px);
-  }
   .top-half h1 {
-      font-size: 40px;
       font-weight: 400;
   }
   .bottom-half h2 {
