--- a/src/ThreeJS/ThreeJS.css
+++ b/src/ThreeJS/ThreeJS.css
@@ -1,11 +1,13 @@
 .canvas-container {
   height: 150vh;
+  height: calc(var(--vh, 1vh) * 150);
   width: 100%;
 }
 .pinned-canvas {
   position: absolute;
   top: -50vh;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   width: 100%;
   position: relative;
 }
